@@ -1,3 +1,10 @@
+2007-07-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-04-01
+	* allow for empty (db) directories to be removed in the
+	SaveConfiguration dialog (context menu)
+	* ScrollableMenu: show either both arrows or no arrows
+
 2007-07-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-04-00
